<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_open_search" android:title="@string/action_open_search"
          android:icon="@drawable/ic_search" android:orderInCategory="100" app:showAsAction="always" />
</menu>
